@@ -28,7 +28,8 @@ table.types th { border: 1px solid; padding: .1em .25em; }
 </td><td>Works with dx #27893 (white) &amp; #27894 (blue)
 </td></tr><tr><td>dx27893_2</td><td>128 x 128</td><td>In menu</td><td><a href="http://www.dealextreme.com/p/1-5-lcd-rechargeable-digital-usb-photo-frame-keychain-white-107-picture-memory-storage-27893">Link</a>
 </td><td>Variation of dx27893
-</td></tr><tr><td>jovisa</td><td>128 x 128</td><td>In menu</td><td><a href="http://www.jovisa.biz/images/egg%20dpf%20or%20copy.jpg">Link</a>
+</td></tr><tr><td>intertronic</td><td>128 x 128</td><td>In menu</td><td><a href="http://www.interdiscount.ch/idshop/product/Spielwaren/873152_ER-324609050132160/INTERTRONIC_Digitaler_Bilderrahmen/detail.jsf">Link</a>
+</td><td></td></tr><tr><td>jovisa</td><td>128 x 128</td><td>In menu</td><td><a href="http://www.jovisa.biz/images/egg%20dpf%20or%20copy.jpg">Link</a>
 </td><td></td></tr><tr><td>pink</td><td>128 x 128</td><td>No</td><td></td><td>Buildin (generic) lcd-controller definition
 </td></tr><tr><td>sevendayshop_pebble</td><td>128 x 128</td><td>No</td><td><a href="http://www.7dayshop.com/7dayshop-pebble-digital-photo-frame-1-5-tft-keyring-version-silver-irresistible-price">Link</a>
 </td><td></td></tr><tr><td>white</td><td>128 x 128</td><td>No</td><td><a href="http://www.dealextreme.com/details.dx/sku.27893">Link</a>
